--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 plugins {
     id 'java'
     id 'war'
@@ -23,55 +22,22 @@ tasks.withType(JavaCompile) {
 }
 
 dependencies {
-    compileOnly('jakarta.platform:jakarta.jakartaee-api:9.1.0')
-    compileOnly('jakarta.mvc:jakarta.mvc-api:2.0.0')
-    compileOnly('jakarta.xml.ws:jakarta.xml.ws-api:3.0.1')
-    implementation('org.hibernate:hibernate-core:6.0.2.Final')
-    implementation('org.glassfish.jaxb:jaxb-runtime:3.0.2')
+    implementation 'jakarta.platform:jakarta.jakartaee-api:9.1.0'
+    implementation 'jakarta.mvc:jakarta.mvc-api:2.0.0'
+    implementation 'jakarta.xml.ws:jakarta.xml.ws-api:3.0.1'
+    implementation 'org.hibernate:hibernate-core:6.0.2.Final'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:2.0.0'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+
+
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
+
 
 test {
     useJUnitPlatform()
-=======
-plugins {
-    id 'java'
-    id 'war'
-}
 
-group 'org.example'
-version '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
-ext {
-    junitVersion = '5.9.2'
-}
-
-sourceCompatibility = '11'
-targetCompatibility = '11'
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
-}
-
-dependencies {
-    compileOnly('javax.servlet:javax.servlet-api:4.0.1')
-    compileOnly('jakarta.platform:jakarta.jakartaee-api:9.1.0')
-    compileOnly('jakarta.mvc:jakarta.mvc-api:2.0.0')
-    compileOnly('jakarta.xml.ws:jakarta.xml.ws-api:3.0.1')
-    implementation('org.hibernate:hibernate-core:6.0.2.Final')
-    implementation('org.glassfish.jaxb:jaxb-runtime:3.0.2')
-
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
-}
-
-test {
-    useJUnitPlatform()
->>>>>>> NguyenTranNhatMinh
 }
